--- a/painting.html
+++ b/painting.html
@@ -230,7 +230,10 @@ $(document).ready(function () {
 </div>
 
 
-<p>some of my paintings</p>
+<p>A collection of some of my better paintings.</p>
+<p>Jim Morrison</p>
+<iframe width="560" height="315" src="https://www.youtube.com/watch?v=c-ZAxYmq8Ds" frameborder="0" allowfullscreen>
+</iframe>
 
 
 
