--- a/blablacarapp.html
+++ b/blablacarapp.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Painting</title>
+<title>Blablacar Mapping Visualization Application</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -264,17 +264,19 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Painting</h1>
+<h1 class="title toc-ignore">Blablacar Mapping Visualization Application</h1>
 
 </div>
 
 
-<p>A collection of some of my paintings.</p>
-<p>Jim Morrison 2018</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/c-ZAxYmq8Ds" frameborder="0" allowfullscreen>
-</iframe>
-<p>King Crimson - Album Cover 2018</p>
-<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Falexjamesryan%2Fvideos%2F10214921584367045%2F&amp;show_text=0&amp;width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true">
+<p>Identified market need for visualizing the most convenient locations to pick-up and drop-off passengers in foreign cities using the Blablacar service.</p>
+<ul>
+<li>Using Python and the Blablacar API, a dataset of 5000 pick-up/drop-off locations was built</li>
+<li>Used Python for requesting trip data from Blablacar API</li>
+<li>Built R Shiny application to visualize the clusters</li>
+<li>A user can see the city they will be visiting, and find where it is most convenient to drop off passengers</li>
+</ul>
+<iframe src="https://ryaale.shinyapps.io/map-shiny-app/?showcase=0" width="672" height="400px">
 </iframe>
 
 
