--- a/contact.html
+++ b/contact.html
@@ -184,11 +184,50 @@ $(document).ready(function () {
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li>
-  <a href="writing.html">Writing</a>
+        <li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Statistics
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="linearregression.html">Linear Regression</a>
+    </li>
+    <li>
+      <a href="logisticregression.html">Logistic Regression</a>
+    </li>
+  </ul>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Projects
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="sentimentanalytics.html">Sentiment Analytics Web Application</a>
+    </li>
+    <li>
+      <a href="blablacarapp.html">Blablacar Mapping Visualization Application</a>
+    </li>
+    <li>
+      <a href="semreport.html">Modelling Personality using the Big Five Factor Model</a>
+    </li>
+    <li>
+      <a href="logisticreport.html">Logistic model of Kidney Transplant success rate</a>
+    </li>
+    <li>
+      <a href="epilepsyreport.html">Measuring effectiveness of treatment for Epilepsy</a>
+    </li>
+  </ul>
 </li>
 <li>
   <a href="painting.html">Painting</a>
+</li>
+<li>
+  <a href="CV_Alexander_Ryan.pdf">CV</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -230,7 +269,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>contact me please</p>
+<p>Alexander Ryan <a href="mailto:alexanderjamesryan@gmail.com">alexanderjamesryan@gmail.com</a></p>
 
 
 
