--- a/logisticreport.html
+++ b/logisticreport.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Painting</title>
+<title>Logistic model of Kidney Transplant success rate</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -264,18 +264,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Painting</h1>
+<h1 class="title toc-ignore">Logistic model of Kidney Transplant success rate</h1>
 
 </div>
 
 
-<p>A collection of some of my paintings.</p>
-<p>Jim Morrison 2018</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/c-ZAxYmq8Ds" frameborder="0" allowfullscreen>
-</iframe>
-<p>King Crimson - Album Cover 2018</p>
-<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Falexjamesryan%2Fvideos%2F10214921584367045%2F&amp;show_text=0&amp;width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true">
-</iframe>
+<p>Modeled the probability of Kidney Transplant success using Logistic Regression</p>
 
 
 
