--- a/index.html
+++ b/index.html
@@ -184,11 +184,50 @@ $(document).ready(function () {
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li>
-  <a href="writing.html">Writing</a>
+        <li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Statistics
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="linearregression.html">Linear Regression</a>
+    </li>
+    <li>
+      <a href="logisticregression.html">Logistic Regression</a>
+    </li>
+  </ul>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Projects
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="sentimentanalytics.html">Sentiment Analytics Web Application</a>
+    </li>
+    <li>
+      <a href="blablacarapp.html">Blablacar Mapping Visualization Application</a>
+    </li>
+    <li>
+      <a href="semreport.html">Modelling Personality using the Big Five Factor Model</a>
+    </li>
+    <li>
+      <a href="logisticreport.html">Logistic model of Kidney Transplant success rate</a>
+    </li>
+    <li>
+      <a href="epilepsyreport.html">Measuring effectiveness of treatment for Epilepsy</a>
+    </li>
+  </ul>
 </li>
 <li>
   <a href="painting.html">Painting</a>
+</li>
+<li>
+  <a href="CV_Alexander_Ryan.pdf">CV</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -231,6 +270,10 @@ $(document).ready(function () {
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p><img src="images/alex-ryan.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left"></p>
+<p>I am a skilled Data Scientist and Product Manager. I am passionate about building awesome products, from ideation, to development, all the way through to deployment.</p>
+<p>I began my education at the University of Melbourne, with a Bachelor of Commerce, I majored in Finance, and I also picked up subjects in Economics, Programming and Statistics. During this time I worked on a few side projects, including a website for posting subject reviews. I learned that it is sometimes better to suffer a steep learning curve, than putting up with inadequate skills and tools, during the development of a project.</p>
+<p>During my studies I started working at the Melbourne Accelerator Program, a startup accelerator program run by the University of Melbourne, that provides seed investment funding for startups as well as educational events, designed to promote entrepreneurial ecosystem in Melbourne. I began as an intern, then as an Associate, working on a range of educational events.</p>
+<p>You can find a copy of my resume <a href="CV_Alexander_Ryan.pdf">here</a></p>
 
 
 
