--- a/linearregression.html
+++ b/linearregression.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Painting</title>
+<title>Linear Regression</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -264,18 +264,58 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Painting</h1>
+<h1 class="title toc-ignore">Linear Regression</h1>
 
 </div>
 
 
-<p>A collection of some of my paintings.</p>
-<p>Jim Morrison 2018</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/c-ZAxYmq8Ds" frameborder="0" allowfullscreen>
-</iframe>
-<p>King Crimson - Album Cover 2018</p>
-<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Falexjamesryan%2Fvideos%2F10214921584367045%2F&amp;show_text=0&amp;width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true">
-</iframe>
+<p><span class="math display">\[y = \beta_1 + \beta_2 X_2 + \beta_3 X_3 +...+ \beta_k X_k + \epsilon  \]</span></p>
+<p>‘y’ is the dependent variable to be estimated</p>
+<p>X are the independent variables</p>
+<p>ε is the error term</p>
+<p>βi’s are the regression coefficients</p>
+<div id="assumptions-of-linear-regression" class="section level3">
+<h3>Assumptions of linear regression:</h3>
+<ol style="list-style-type: decimal">
+<li>There must be a linear relation between independent and dependent variables.</li>
+<li>There should not be any outliers present.</li>
+<li>No heteroscedasticity</li>
+<li>Sample observations should be independent.</li>
+<li>Error terms should be normally distributed with mean 0 and constant variance.</li>
+<li>Absence of multicollinearity and auto-correlation.</li>
+</ol>
+</div>
+<div id="estimating-the-parameters" class="section level3">
+<h3>Estimating the parameters</h3>
+<p>To estimate the regression coefficients βi’s we use principle of least squares which is to minimize the sum of squares due to the error term ε:</p>
+<p><span class="math display">\[Min \sum \epsilon^2 = Min \sum (y - (\beta_1 + \beta_2 X_2 + \beta_3 X_3 +...+ \beta_k X_k))^2\]</span></p>
+<p>Solving the above equation mathematically we obtain the regression coefficients:</p>
+<p><span class="math display">\[\hat \beta = (X&#39;X)^{-1} X&#39;y\]</span></p>
+</div>
+<div id="interpretation-of-regression-coefficients" class="section level3">
+<h3>Interpretation of regression coefficients</h3>
+<p>For every unit change in the indepdent variables <span class="math inline">\((X_k)\)</span> the dependent variable (y) will change by regression coefficient <span class="math inline">\((\beta_k)\)</span></p>
+</div>
+<div id="calculating-the-least-squares-by-hand" class="section level3">
+<h3>Calculating the Least Squares by hand</h3>
+<div id="step-1-calculate-the-mean-of-the-x-values-and-the-mean-of-the-y-values" class="section level4">
+<h4>Step 1: Calculate the mean of the x-values and the mean of the y-values:</h4>
+<p><span class="math display">\[\bar X = \frac {\sum_{i=1}^{n} x_i}{n}  \]</span></p>
+<p><span class="math display">\[\bar Y = \frac {\sum_{i=1}^{n} y_i}{n}  \]</span></p>
+</div>
+<div id="step-2-the-following-formula-gives-the-slope-of-the-line-of-best-fit" class="section level4">
+<h4>Step 2: The following formula gives the slope of the line of best fit:</h4>
+<p><span class="math display">\[ m = \frac {\sum_{i=1}^n (x_i - \bar X) (y_i - \bar Y)}{\sum_{i=1}^{n} (x_i - \bar X)^2}  \]</span></p>
+</div>
+<div id="step-3-compute-the-y-intercept-of-the-line-by-using-the-formula" class="section level4">
+<h4>Step 3: Compute the y-intercept of the line by using the formula:</h4>
+<p><span class="math display">\[ b = \bar Y - m \bar X\]</span></p>
+</div>
+<div id="step-4-use-the-slope-m-and-the-y-intercept-b-to-form-the-equation-of-the-line" class="section level4">
+<h4>Step 4: Use the slope m and the y-intercept b to form the equation of the line:</h4>
+<p><span class="math display">\[ y = m x + b\]</span></p>
+</div>
+</div>
 
 
 
