--- a/logisticregression.html
+++ b/logisticregression.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Painting</title>
+<title>Logistic Regression</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -264,18 +264,15 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Painting</h1>
+<h1 class="title toc-ignore">Logistic Regression</h1>
 
 </div>
 
 
-<p>A collection of some of my paintings.</p>
-<p>Jim Morrison 2018</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/c-ZAxYmq8Ds" frameborder="0" allowfullscreen>
-</iframe>
-<p>King Crimson - Album Cover 2018</p>
-<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Falexjamesryan%2Fvideos%2F10214921584367045%2F&amp;show_text=0&amp;width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true">
-</iframe>
+<p>The dependent variable (in this case <span class="math inline">\(Y_i\)</span>) is binary in nature.</p>
+<p>Indepdent variables <span class="math inline">\((X_i)\)</span> can be binary or continuous.</p>
+<p><span class="math display">\[Y_i = \frac{1}{1-e^{-X_i \beta}} + \epsilon_i\]</span></p>
+<p>Where <span class="math inline">\(-\infty \lt x \lt \infty\)</span>, <span class="math inline">\(y = 0, 1\)</span></p>
 
 
 
