--- a/logisticregression.html
+++ b/logisticregression.html
@@ -197,6 +197,15 @@ $(document).ready(function () {
     <li>
       <a href="logisticregression.html">Logistic Regression</a>
     </li>
+    <li>
+      <a href="sentimentanalysis101.html">Sentiment Analysis with Python</a>
+    </li>
+    <li>
+      <a href="datasciencebasictools.html">Data Science Basic Tools Overview</a>
+    </li>
+    <li>
+      <a href="datascienceinterviewquestions.html">Data Science Interview Questions</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
