--- a/datascienceinterviewquestions.html
+++ b/datascienceinterviewquestions.html
@@ -278,7 +278,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>Preparation for a data scientist interview can be challenging. It seems the questions can come from a infinite chain, from a vast collection of content. But the important part to remember this list is finite, and can be gamed. By learning these questions, you will imbue yourself with the foundational structure, you will be learning what is important to the field.</p>
+<p>Preparation for a data scientist interview can be challenging. It seems the questions can come from a infinite chain, from a vast collection of content, in a variety of different subfields. But the important part to remember this list is finite, and can be gamed. By learning these questions, you will imbue yourself with the foundational structure of data science, you will be learning what is important to the field.</p>
 <div id="statistics" class="section level1">
 <h1>Statistics</h1>
 <p>Name a probability distribution other than Normal and explain how to apply this probability?</p>
