--- a/contact.html
+++ b/contact.html
@@ -278,7 +278,8 @@ $(document).ready(function () {
 </div>
 
 
-<p>Alexander Ryan <a href="mailto:alexanderjamesryan@gmail.com">alexanderjamesryan@gmail.com</a></p>
+<p>Alexander Ryan<br />
+<a href="mailto:alexanderjamesryan@gmail.com">alexanderjamesryan@gmail.com</a></p>
 
 
 
