--- a/datascienceinterviewquestions.html
+++ b/datascienceinterviewquestions.html
@@ -278,10 +278,11 @@ $(document).ready(function () {
 </div>
 
 
-<p>Preparation for a data scientist interview can be challenging. It seems the questions can come from a infinite chain, from a vast collection of content, in a variety of different subfields. But the important part to remember this list is finite, and can be gamed. By learning these questions, you will imbue yourself with the foundational structure of data science, you will be learning what is important to the field.</p>
-<div id="statistics" class="section level1">
-<h1>Statistics</h1>
+<p>Preparation for a data scientist interview can be challenging. It seems the questions can come from a infinite chain, from a vast collection of content, in a variety of different subfields. But the important part to remember this list is finite, and can be gamed. By learning these questions, you will imbue yourself with the foundational structure of data science, you will be learning what is important to the field, and the avenues to further explore.</p>
+<div id="statistics" class="section level3">
+<h3>Statistics</h3>
 <p>Name a probability distribution other than Normal and explain how to apply this probability?</p>
+<p>Explain p-value in terms that someone unfamiliar with statistics can understand.</p>
 <p>How best to select a representative sample of search queries from 5 million?</p>
 <p>The mean heights of men and women in a population were calculated to be mM and mW. What is the mean height of the total population?</p>
 <p>Three friends in Seattle told you it’s rainy. Each has a probability of 1/3 of lying. What’s the probability of Seattle is rainy?</p>
@@ -293,8 +294,8 @@ $(document).ready(function () {
 <p>What is the goal of A/B Testing?</p>
 <p>What is sampling? Why we need it? What is stratified sampling?</p>
 </div>
-<div id="programming-challenges" class="section level1">
-<h1>Programming Challenges</h1>
+<div id="programming-challenges" class="section level3">
+<h3>Programming Challenges</h3>
 <p>Find all palindromic substrings in a given string.</p>
 <p>How would you check if a linked list has cycles?</p>
 <p>Merge k (in this case k=2) arrays and sort them.</p>
@@ -304,8 +305,8 @@ $(document).ready(function () {
 <p>Given a list A of objects and another list B which is identical to A except that one element is removed, find the removed element.</p>
 <p>Given a list of integers (positive &amp; negative), write an algorithm to find whether there’s at least a pair of integers that sum up to zero.</p>
 </div>
-<div id="assorted-data-science-questions" class="section level1">
-<h1>Assorted Data Science Questions</h1>
+<div id="assorted-data-science-questions" class="section level3">
+<h3>Assorted Data Science Questions</h3>
 <p>What are your go-to packages? (scikit-learn, xgboost, Pandas, numpy/scipy, Keras, matplotlib)</p>
 <p>What techniques do you use to fine-tune hyperparameters? (Cross-validation, grid-search, random-search, tree of Parzen estimators, Bayesian optimization.)</p>
 <p>How to quickly find if a text contains one of a million substrings. (Prefix trees.)</p>
