--- a/epilepsyreport.html
+++ b/epilepsyreport.html
@@ -278,7 +278,12 @@ $(document).ready(function () {
 </div>
 
 
-<p>Modeled number of seizures suffered by two patient groups to determine the effectiveness of treatment, Progabide</p>
+<p>The goal of this analysis was to model the number of seizures suffered by patients, alongside their age and a treatment. Thus, the core goal was to measure the effectiveness of the treatment, Progabide, against the placebo group, in reducing the number of seizures.</p>
+<p>You can find a copy of the paper <a href="epilepsyreport.pdf">here</a></p>
+<div class="figure">
+<img src="epilepsyreport.jpg" />
+
+</div>
 
 
 
