--- a/logisticreport.html
+++ b/logisticreport.html
@@ -279,6 +279,11 @@ $(document).ready(function () {
 
 
 <p>Modeled the probability of Kidney Transplant success using Logistic Regression</p>
+<p>You can find a copy of the paper <a href="logisticreport.pdf">here</a></p>
+<div class="figure">
+<img src="logisticmodel.jpg" />
+
+</div>
 
 
 
