--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Writing</title>
+<title>Projects</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -273,12 +273,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Writing</h1>
+<h1 class="title toc-ignore">Projects</h1>
 
 </div>
 
 
-<p>Some of my writing</p>
+
 
 
 
