--- a/logisticreport.html
+++ b/logisticreport.html
@@ -278,7 +278,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>Modeled the probability of Kidney Transplant success using Logistic Regression</p>
+<p>The goal of this analysis was to model the probability of graft failure in kidney transplants, using a dataset of 1158 patients. The predictor variables include the binary variables, sex of the patient (male), presence of cardio-vascular problems (cardio). The continuous predictor variables include the age of the patient (age), haematocrit level before the transplant (HC).</p>
 <p>You can find a copy of the paper <a href="logisticreport.pdf">here</a></p>
 <div class="figure">
 <img src="logisticmodel.jpg" />
