--- a/painting.html
+++ b/painting.html
@@ -186,30 +186,6 @@ $(document).ready(function () {
       <ul class="nav navbar-nav">
         <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-    Statistics
-     
-    <span class="caret"></span>
-  </a>
-  <ul class="dropdown-menu" role="menu">
-    <li>
-      <a href="linearregression.html">Linear Regression</a>
-    </li>
-    <li>
-      <a href="logisticregression.html">Logistic Regression</a>
-    </li>
-    <li>
-      <a href="sentimentanalysis101.html">Sentiment Analysis with Python</a>
-    </li>
-    <li>
-      <a href="datasciencebasictools.html">Data Science Basic Tools Overview</a>
-    </li>
-    <li>
-      <a href="datascienceinterviewquestions.html">Data Science Interview Questions</a>
-    </li>
-  </ul>
-</li>
-<li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
     Projects
      
     <span class="caret"></span>
@@ -278,12 +254,22 @@ $(document).ready(function () {
 </div>
 
 
-<p><strong>Jim Morrison 2018</strong></p>
+<p><strong>Jim Morrison of The Doors (2018)</strong></p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/c-ZAxYmq8Ds" frameborder="0" allowfullscreen>
 </iframe>
-<p><strong>King Crimson - Album Cover 2018</strong></p>
+<p><strong>King Crimson - Album Cover (2018)</strong></p>
 <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Falexjamesryan%2Fvideos%2F10214921584367045%2F&amp;show_text=0&amp;width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true">
 </iframe>
+<p><strong>Albert Camus - Portrait (2017)</strong></p>
+<p><img src="images/albert-camus.png" alt="Albert Camus (2017)" style="width:400px;"/></p>
+<p><strong>David Foster Wallace - Portrait (2017)</strong></p>
+<p><img src="images/david-foster-wallace.jpeg" alt="David Foster Wallace (2017)" style="width:400px;"/></p>
+<p><strong>Jack Nickolson - Portrait (2017)</strong></p>
+<p><img src="images/jack-nickolson.png" alt="Jack Nickolson (2017)" style="width:400px;"/></p>
+<p><strong>Philip K. Dick - Portrait (2017)</strong></p>
+<p><img src="images/philip-k-dick.png" alt="Philip K. Dick (2017)" style="width:400px;"/></p>
+<p><strong>Swimming (2017)</strong></p>
+<p><img src="images/swimming.png" alt="Swimming (2017)" style="width:400px;"/></p>
 
 
 
